# Nova

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.jsx  main.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: Orb.jsx
